Añadir cambio de estado a usuario admin

--- a/store/templates/store/customers_orders.html
+++ b/store/templates/store/customers_orders.html
@@ -16,10 +16,10 @@
         <div class="col-md-6">
             <h2>Posibles Estados:</h2>
             <div class="btn-group" role="group">
-                <button type="button" class="btn btn-secondary">PL: En Almacen</button>
-                <button type="button" class="btn btn-secondary">PR: Procesando</button>
-                <button type="button" class="btn btn-secondary">SH: En Camino</button>
-                <button type="button" class="btn btn-secondary">DE: Entregado</button>
+                <button type="button" class="btn btn-secondary">EA: En Almacen</button>
+                <button type="button" class="btn btn-secondary">P: Procesando</button>
+                <button type="button" class="btn btn-secondary">EC: En Camino</button>
+                <button type="button" class="btn btn-secondary">E: Entregado</button>
             </div>
         </div>
         <div class="col-md-6 text-right">
@@ -34,11 +34,11 @@
                 <label class="mr-sm-2" for="status">ESTADOS:</label>
                 <select class="form-control mr-sm-2" name="status" id="status" onchange="this.form.submit()">
                     <option value="">Todos</option>
-                    <option value="PL">En Almacen</option>
-                    <option value="PR">Procesando</option>
-                    <option value="SH">En Camino</option>
-                    <option value="DE">Entregado</option>
-                </select>
+                    <option value="EA">En Almacen</option>
+                    <option value="P">Procesando</option>
+                    <option value="EC">En Camino</option>
+                    <option value="E">Entregado</option>
+        </select>
             </form>
         </div>
     </div>
