--- a/store/templates/store/guest_orders.html
+++ b/store/templates/store/guest_orders.html
@@ -8,10 +8,10 @@
                 <div class="col-md-6">
                     <h2>Posibles Estados:</h2>
                     <div class="btn-group" role="group">
-                        <button type="button" class="btn btn-secondary">PL: En Almacen</button>
-                        <button type="button" class="btn btn-secondary">PR: Procesando</button>
-                        <button type="button" class="btn btn-secondary">SH: En Camino</button>
-                        <button type="button" class="btn btn-secondary">DE: Entregado</button>
+                        <button type="button" class="btn btn-secondary">EA: En Almacen</button>
+                        <button type="button" class="btn btn-secondary">P: Procesando</button>
+                        <button type="button" class="btn btn-secondary">EC: En Camino</button>
+                        <button type="button" class="btn btn-secondary">E: Entregado</button>
                     </div>
                 </div>
                 <div class="col-md-6 text-right">
@@ -26,10 +26,10 @@
                         <label class="mr-sm-2" for="status">ESTADOS:</label>
                         <select class="form-control mr-sm-2" name="status" id="status" onchange="this.form.submit()">
                             <option value="">Todos</option>
-                            <option value="PL">En Almacen</option>
-                            <option value="PR">Procesando</option>
-                            <option value="SH">En Camino</option>
-                            <option value="DE">Entregado</option>
+                            <option value="EA">En Almacen</option>
+                            <option value="P">Procesando</option>
+                            <option value="EC">En Camino</option>
+                            <option value="E">Entregado</option>
                         </select>
                     </form>
                 </div>
@@ -53,7 +53,18 @@
                         {% if order.transaction_id %}
                             <tr>
                                 <td>{{ order.id }}</td>
-                                <td>{{ order.status }}</td>
+                                <td>
+                                    <form method="post" action="{% url 'update_order' order.id %}">
+                                        {% csrf_token %}
+                                        <select name="status" onchange="this.form.submit()">
+                                            <option value="EA" {% if order.status == "EA" %}selected{% endif %}>EA</option>
+                                            <option value="P" {% if order.status == "P" %}selected{% endif %}>P</option>
+                                            <option value="EC" {% if order.status == "EC" %}selected{% endif %}>EC</option>
+                                            <option value="E" {% if order.status == "E" %}selected{% endif %}>E</option>
+                                        </select>
+                                        <input type="submit">
+                                    </form>
+                                </td>
                                 <td>{{ order.get_cart_total }}</td>
                                 <td>{{ order.date_ordered }}</td>
                                 <td>{{ order.complete }}</td>
