--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -125,7 +125,7 @@
     </script>
 
 	<script type="text/javascript">
-		var shipping = '{{order.shipping}}'
+		var shipping = false
 		var user = '{{user}}'
 
 
