--- a/users/templates/users/admin.html
+++ b/users/templates/users/admin.html
@@ -1,26 +1,22 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-    <!--Font awesome icons -->
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-
-    <title>{% block title %} {% endblock %} </title>
-</head>
-<body>
+{% extends "users/base.html" %}
+{% block title %} Usuarios {% endblock title %}
+{% block content %}
 
     <div class="container p-3 my-3">
-
+        <a href="{% url 'admin-users-create' %}" class="btn btn-dark mb-3">Crear Usuario</a>
         <table class="table">
+            <thead>
+                <tr>
+                    <th>Nombre de Usuario</th>
+                    <th>Email</th>
+                    <th>Nombre</th>
+                    <th>Apellidos</th>
+                    <th>Avatar</th>
+                    <th>Acciones</th>
+                </tr>
+            </thead>
             <tbody>    
                 {% for i in users %}
-                
                 <tr>
                     <td>
                         {{ i.user.username }}
@@ -29,18 +25,21 @@
                         {{ i.user.email }}
                     </td>
                     <td>
-                        <img class="rounded-circle account-img" src="{{ i.avatar.url }} " style="cursor: pointer;"/>
+                        {{ i.user.first_name }}
                     </td>
                     <td>
-                        <a href="edit/{{i.user.username}}" class="btn btn-success">Editar</button>
+                        {{ i.user.last_name }}
                     </td>
                     <td>
-                        <a href="delete/{{i.user.username}}" class="btn btn-danger">Eliminar</button>
+                        <img class="rounded-circle account-img" src="{{ i.avatar.url }}" style="cursor: pointer;"/>
+                    </td>
+                    <td>
+                        <a href="{% url 'admin-users-update' i.user.username %}" class="btn btn-success">Editar</a>
+                        <a href="{% url 'admin-users-delete' i.user.username %}" class="btn btn-danger">Eliminar</a>
                     </td>
                 </tr>
                 {% endfor %}
             </tbody>
         </table>
     </div>
-</body>
-</html>
+{% endblock content %}
