--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,6 +1,11 @@
 {% extends "users/base.html" %}
 {% block title %}Perfil{% endblock title %}
 {% block content %}
+{% if user.is_staff %}
+<div class="alert alert-info" role="alert">
+    Eres un administrador, por lo que puedes acceder al <a href="/admin/">panel de administrador</a>.
+</div>
+{% endif %}
     <div class="row my-3 p-3">
         <img class="rounded-circle account-img" src="{{ user.profile.avatar.url }} " style="cursor: pointer;"/>
     </div>
@@ -26,6 +31,10 @@
                             {{ user_form.username }}
                         <label class="small mb-1">Email:</label>
                             {{ user_form.email }}
+                            <label class="small mb-1">Nombre:</label>
+                            {{ user_form.first_name }}
+                        <label class="small mb-1">Apellidos:</label>
+                            {{ user_form.last_name }}
                     </div>
                     <div class="form-group">
                         <a href="{% url 'password_change' %}">Cambiar contraseña</a>
