Correo automatico y mejoras

--- a/store/templates/store/payment-cancelled.html
+++ b/store/templates/store/payment-cancelled.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
     <div>
-        <h1>Pago realizado correctamente</h1>
+        <h1>Pago fallido</h1>
         <a href="/store/catalog">Volver a la tienda</a>
     </div>
 
