--- a/store/templates/store/guest_orders.html
+++ b/store/templates/store/guest_orders.html
@@ -52,7 +52,7 @@
                     {% for order in page_obj %}
                         {% if order.transaction_id %}
                             <tr>
-                                <td>{{ order.id }}</td>
+                                <td><a href="{% url 'track_order' order.id %}">{{ order.id }}</a></td>
                                 <td>
                                     <form method="post" action="{% url 'update_order' order.id %}">
                                         {% csrf_token %}
